v1.2.15 - 2017-08-17 - Documentation improvements
-------------------------------------------------

- Fix `#83`_: Improved documentation for finding the official repository and
  contributing.

.. _#83: https://bitbucket.org/illocution/django-auth-ldap/issues/83/


v1.2.14 - 2017-07-24 - User DN caching
--------------------------------------

- Fix `#82`_: Under search/bind mode, the user's DN will now be cached for
  performance.

.. _#82: https://bitbucket.org/illocution/django-auth-ldap/issues/82/


v1.2.13 - 2017-06-19 - Selective group mirroring
------------------------------------------------

- Support selective group mirroring with :setting:`AUTH_LDAP_MIRROR_GROUPS` and
  :setting:`AUTH_LDAP_MIRROR_GROUPS_EXCEPT`.

- Fix `#73`_: Work around Django 1.11 bug with multiple authentication backends.

.. _#73: https://bitbucket.org/illocution/django-auth-ldap/issues/73/


v1.2.12 - 2017-05-20 - Complex group queries
--------------------------------------------

- Support for complex group queries via
  :class:`~django_auth_ldap.config.LDAPGroupQuery`.


v1.2.11 - 2017-04-22 - Testing and debugging cleanup
----------------------------------------------------

- Some more descriptive object representations.

- Improved tox.ini organization.


v1.2.9 - 2017-02-14 - Fix python-ldap incompatibility
-----------------------------------------------------

- Fix `#65`_: Ignore python-ldap documentation and accept
  :data:`ldap.RES_SEARCH_ENTRY` from :meth:`ldap.LDAPObject.result`.

.. _#65: https://bitbucket.org/illocution/django-auth-ldap/issues/65/


v1.2.8 - 2016-04-18 - AUTH_LDAP_USER_ATTRLIST
---------------------------------------------

- Add :setting:`AUTH_LDAP_USER_ATTRLIST` to override the set of attributes
  requested from the LDAP server.


v1.2.7 - 2015-09-29 - Python 3
------------------------------

- Support Python 3 with `pyldap <https://pypi.python.org/pypi/pyldap>`_.


v1.2.6 - 2015-03-29
-------------------
