@@ -6,21 +6,17 @@ max-line-length = 120
 
 
 [tox]
-envlist = py36-static,
-          py27-django15
-          py{27,33}-django{15,16},
-          py{27,33,34}-django17
-          py{27,34,35}-django{18,19,110,111},
-          py36-django111,
+envlist = py36-static
+          py{27,33,34,35}-django18
+          py{27,34,35}-django19
+          py{27,34,35}-django110
+          py{27,34,35,36}-django111
 
 
 [testenv]
 changedir = test
 commands = {envpython} manage.py test django_auth_ldap
 deps = mockldap>=0.2.7
-       django15: Django>=1.5,<1.6
-       django16: Django>=1.6,<1.7
-       django17: Django>=1.7,<1.8
        django18: Django>=1.8,<1.9
        django19: Django>=1.9,<1.10
        django110: Django>=1.10,<1.11
