@@ -1,3 +1,8 @@
+UNRELEASED
+----------
+
+- **Backwards incompatible**: Removed support for Django 1.5, 1.6, and 1.7.
+
 v1.2.15 - 2017-08-17 - Documentation improvements
 -------------------------------------------------
 
